# usb-station

./: .gitignore  README.md  store-config.json
.github/workflows/: ci.yml  publish.yml  release.yml
Apps/usb-station/: docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: main.rs
backend/src/api/: batch.rs  flash.rs  health.rs  iso.rs  mod.rs  usb.rs  ws.rs
backend/src/config/: mod.rs
backend/src/domain/: batch.rs  events.rs  flash.rs  iso.rs  mod.rs  usb.rs  user.rs
backend/src/infra/: database.rs  event_bus.rs  mod.rs  usb.rs
backend/src/service/: batch.rs  flash.rs  iso.rs  mod.rs  usb.rs
backend/src/worker/: flash_worker.rs  mod.rs
docker/: Dockerfile.backend  Dockerfile.combined  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: zimaos.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts  queries.ts
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/pages/: BatchPage.tsx  DashboardPage.tsx  FlashQueuePage.tsx  IsoPage.tsx  SettingsPage.tsx  UsbPage.tsx
frontend/src/components/ui/: card.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/routes/: index.ts
frontend/src/styles/: globals.css
scripts/: dev.sh  setup.sh
