[package]
name = "usb-station"
version = "0.1.0"
edition = "2021"
description = "Self-hosted web application for creating bootable USB drives"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"

sha2 = "0.10"
md-5 = "0.10"
regex = "1"

tokio-util = { version = "0.7", features = ["rt"] }

reqwest = { version = "0.12", features = ["stream"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "1"
anyhow = "1"

futures = "0.3"

udev = "0.8"
inotify = "0.10"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
